<resources>
    <string name="app_name">淘呗</string>
    <string name="add_shop">添加</string>
    <string name="add_id">店铺编号</string>
    <string name="add_name">店铺名</string>
    <string name="add_picture">图片</string>
    <string name="add">添加</string>
    <string name="add_goods">添加</string>
    <string name="btn_goods_edit">修改</string>
    <string name="add_goods_id">商品编号</string>
    <string name="goods_name">商品名</string>
    <string name="add_goods_picture">商品图片</string>
    <string name="add_goods_price">商品价格</string>
    <string name="add_goods_num">商品数量</string>
    <string name="shop_picture_edit">店铺图片</string>
    <string name="edit">修改</string>
    <string name="shop_name">店铺名称</string>
    <string name="goods_picture_edit">商品图片</string>
    <string name="goods_num">商品数量</string>
    <string name="goods_price">商品价格</string>
    <string name="buy">购买</string>
    <string name="look">查看</string>
    <string name="shop_enter">进入店铺</string>
    <string name="buy_num">购买数量</string>
    <string name="take_photo">拍照</string>
    <string name="add_good">添加商品</string>
    <string name="add_shopb">添加店铺</string>
    <string name="adds">商城</string>
    <string name="add_buy">购买商品</string>
    <string name="add_goods_p">价格</string>
    <string name="add_goods_ps">数量    </string>
    <string name="add_goods_pr">价格（元）    </string>
    <string name="my_goods">我的商品</string>
    <string name="add_goods_data">修改商品信息</string>
    <string name="my_shop">我的店铺</string>
    <string name="goods_enter">查看商品</string>
    <string name="shop_names">店铺名称</string>
    <string name="shop_user">店长</string>
    <string name="money">价格</string>
    <string name="sign_in">注册</string>
    <string name="btn_goods_delete">删除商品</string>
    <string name="btn_shop_delete">删除店铺</string>
    <string name="my_history">历史订单</string>
    <string name="choose_photo">选择照片</string>
    <string name="my_photo">我的照片</string>
    <string name="show">确认</string>
</resources>
