<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddGoodsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/add_good"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/add_goods_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_goods_id"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/add_goods_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goods_name"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/add_goods_picture"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_goods_picture"
        android:gravity="center"/>

    <EditText
        android:id="@+id/add_goods_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/add_goods_price"
        android:gravity="center"/>

    <EditText
        android:id="@+id/add_goods_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/add_goods_num"
        android:gravity="center"/>

    <Button
        android:id="@+id/add_goods_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:background="@drawable/background"
        android:text="@string/add"/>

</LinearLayout>