<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_shop"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background"
        app:title="@string/goods_enter"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/shop_enter_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/shop_enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_names"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/shop_enter_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_user"
        android:layout_margin="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_shop_enter"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>