<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyDataActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background"
        app:title="修改店铺"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/shop_picture_edit"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:hint="@string/shop_picture_edit"/>

        <Button
            android:id="@+id/btn_shop_picture_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@drawable/background"
            android:layout_margin="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/edit"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/shop_name_edit"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:hint="@string/shop_name"/>

        <Button
            android:id="@+id/btn_shop_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:background="@drawable/background"
            android:textColor="#FFFFFF"
            android:text="@string/edit"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_delete_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_shop_delete"
        android:background="@drawable/background"
        android:textColor="#FFFFFF"
        android:layout_margin="40dp"/>



</LinearLayout>